--- a/minimax.tex
+++ b/minimax.tex
@@ -86,11 +86,9 @@ converge quickly to a near-optimal alternative. Finally, we analyze these strate
 \end{abstract}
 
 \section{Introduction}
-\commentOC{Remaining refs to appendix. Describe what is there.}
-\commentPV{If we have space (can save by formatting the itemize at the end of experiments as text), show Regret and PMR formulas as displaymath}
 Aggregation of preference information is a central task in many computer systems (recommender systems, search engines, etc).
 In many situations, such as in group recommender systems, the goal is to find a consensus choice;
-social choice theory can provide foundations for such applications
+social choice theory can provide foundations for such applications.
 
 %The traditional approach to social choice assumes that both the social choice function and the full preference orderings of the agents (voters) are expressed beforehand. These represent two strong hypothesis.
 The traditional approach to social choice assumes that 1) the full preference orderings of the agents and 2) the social choice function are expressed beforehand. These represent two strong hypothesis.
@@ -108,7 +106,7 @@ one early work is  by \Citet{Conitzer2005} who studied the complexity of communi
 additional complexity results were given by \citet{Walsh2007} and \citet{Pini2007}.
 %\citep{Walsh2007} showed that the general case remains computationally hard even when restricting to single-peaked preferences;  sufficient conditions that ensure tractability were then found \citep{Pini2007}.
 
-Since in many practical situations there would be too many possible winners but no necessary winners, several works addressed the problem of agent preferences elicitation using a variety of approaches (minimax regret, Bayesian methods, etc.) with the goal of converging to a necessary winner \citep{Naamani-Dery2015,Kalech2011,Lu2011,Pini2009,Benabbou2016,Dey2016,Dey2016_2}. Among those, \citet{Walsh2009,Conitzer2009} analyzed when to stop the elicitation process.
+Since in many practical situations there would be too many possible winners but no necessary winners, several works addressed the problem of agent preferences elicitation using a variety of approaches (minimax regret, Bayesian methods, etc.) with the goal of converging to a necessary winner \citep{Naamani-Dery2015,Kalech2011,Lu2011,Pini2009,Benabbou2016,Dey2016,Dey2016_2}. Among those, \citet{Walsh2009} and \citet{Conitzer2009} analyzed when to stop the elicitation process.
 
 A second concern is the ability of the chair (the person or organization supervising the voting process) to provide a precise definition of the voting rule, suggesting the relaxation of the second hypothesis. Indeed, it is often difficult for non-experts to formalize a voting rule on the basis of some generic preferences over a desired aggregation method. 
 %Thus, the first hypothesis should also be relaxed. 
@@ -117,13 +115,13 @@ Consider, as an example, a chair that is about to hire a new employee, whose per
 %The information provided can be used to   % to determine their employee of choice.
 
 %This paper considers both sources of uncertainty at the same time, and proposes a method able to recommend a consensus choice without requiring full knowledge of either.
-In this paper, we focus on positional scoring rules, that are a particularly common method used to aggregate rankings. 
+In this paper, we focus on positional scoring rules with convex weights, that are a particularly common method used to aggregate rankings. 
 We develop methods, based on the notion of minimax regret, for determining a robust ``winner'' under uncertainty of both the voting rule and the agent preferences.
 %alternative using positional scoring rules and 
 We provide incremental elicitation methods that 
-at each step of the elicitation ask a question either to one of the agents or to the chair, and discuss several heuristics that determine queries that quickly reduce regret. 
-Answers to questions are encoded in terms of constraints; questions to the agents are comparisons between pairs of alternatives while
-questions to the chair ask  to select who should be the winner in a synthetic profile.
+at each step of the elicitation question either one of the agents or the chair, and we discuss several heuristics to choose questions that quickly reduce the regret. 
+Answers to questions are encoded as constraints; questions to the agents are comparisons between pairs of alternatives while
+questions to the chair ask to select a winner out of a synthetic profile.
 
 While some previous works have considered partially specified aggregation methods \citep{Stein1994,Llamazares2013,Viappiani2018}, we do not know of any work considering both sources of uncertainty at the same time. 
 %has dealt with %scenarios where it is instead the voting rule that is partially defined. % but the preferences are given. 
@@ -222,7 +220,7 @@ Recall that, in the computation of $s(x; \profile, \w)$, $w_{v_j(x)}$ represents
 Since scoring rules are additively decomposable, we can consider separately the contribution of each agent to the total score. Thus, we can write the actual regret of choosing $x$ instead of $y$ as $s(y; \profile,\w) - s(x; \profile, \w) = \sum_{j=1}^n w_{v_j(y)} - w_{v_j(x)}$, and we obtain $\PMR(x,y; \pprofile, W) =  \max_{\w \in W} \sum_{j=1}^{n} \max_{v_j \in C(\succ_j^p)} [w_{v_j(y)} - w_{v_j(x)}]$.
 %Note that in general the inner max depends on the weights chosen by the outer max.
 
-The following propositions (proofs in appendix) show that the procedure for completing a partial profile,  proposed by \citet{Lu2011} when considering a fixed weight vector, also applies in our setting. We write $a \pprefeq_j b$ iff $a \ppref_j b \lor a = b$ and adopt the canonical notation when considering a relation as a function, writing ${\pprefeq_j}(x)$ to designate $\set{y \suchthat x \pprefeq_j y}$.
+The following propositions (with proofs in appendix) show that the procedure for completing a partial profile,  proposed by \citet{Lu2011} when considering a fixed weight vector, also applies in our setting. We write $a \pprefeq_j b$ iff $a \ppref_j b \lor a = b$ and adopt the canonical notation when considering a relation as a function, writing ${\pprefeq_j}(x)$ for $\set{y \suchthat x \pprefeq_j y}$.
 
 \begin{proposition} \label{claim:completion}
 	There exists a completion $\hat{\profile} \in C(\pprofile)$ of the profile $\profile$ such that $\PMR(x,y; \pprofile, W) = \max_{\w \in W} [ s(y; \hat{\profile}, \w) - s(x; \hat{\profile}, \w) ]$ and such that the linear order $\hat{v}_{j}$ of each agent $j$ satisfies:
@@ -287,10 +285,10 @@ Such questions aim at refining our knowledge about the scoring rule; a response 
 In particular, we want to obtain constraints of the type $w_{r} - w_{r+1} \geq \lambda (w_{r+1} - w_{r+2})$ for $r \in \{1,\ldots,m-2\}$, relating the difference between the importance of ranks $r$ and $r+1$ with the difference between ranks $r+1$ and $r+2$.
 
 \paragraph{Building concrete questions for the chair}
-Even if the chair might be considered able to answer directly such abstract questions, we want to ensure that these questions can also, in principle, be asked in a more concrete way: in terms of winners of example profiles. Such questions have precise semantics whose understanding can be assumed to be shared by the chair, contrary to abstract questions about weights. 
+Even if the chair might be considered able to answer directly such abstract questions, we want to ensure that these questions can also, in principle, be asked in a more concrete way: in terms of winners of example profiles. Such questions have clear semantics whose understanding can be assumed to be shared by the chair, contrary to abstract questions about weights. 
 Moreover, this way of questioning the chair is independent of the voting rule that is being elicited. Questions about weights only make sense when considering PSRs.
 Asking who should win in specific profiles has been used in experimental settings investigating the feeling of justice of individuals \citep{Giritligil2005}, but, to the best of our knowledge, the use of such questions to systematically guide an elicitation process about voting rules is novel. 
-This is similar to favor, in decision theory, direct choice questions ("please choose either a or b") compared to questioning the decision maker about the shape of her utility function. The former are considered “observable”: acts of choice are translated to preference statements \citep[Ch.\ 1]{colell_microeconomic_1995}. 
+This is similar to favor, in decision theory, direct choice questions ("please choose either a or b") compared to, say, questioning the decision maker about the shape of her utility function. The former are considered “observable”: acts of choice are translated to preference statements \citep[Ch.\ 1]{colell_microeconomic_1995}. 
 
 Thus, our task is to build a profile, given $\lambda$ and $r ≤ m-2$, in such a way that the set of (tied) winners picked by the chair reveals whether $w_{r} - w_{r+1} \geq \lambda (w_{r+1} - w_{r+2})$.
 \begin{proposition}\label{prop:chairQuestions}
@@ -327,13 +325,14 @@ In the second case, it draws equiprobably among the agents whose preference is n
 
 Let $(x^{*},\bar{y}, \bar{\profile}, \bar{\w})$ be the current solution of the minimax regret, where $x^{*}$ is the minimax optimal alternative and $\bar{y}, \bar{\profile}, \bar{\w}$ the corresponding adversarial choices. 
 The \strat{Pessimistic} strategy considers a set of $n + (m-2)$ candidate questions: one per agent, and one per rank (excluding the first and the last one which are known).
-The candidate questions to the agents are chosen by extending the idea of \citet{Lu2011}, that priviledge learning about the relationship of $x^*$ and $\bar{y}$ to the other alternatives if possible.
-The candidate questions to the chair are determined as in the Random strategy.
-The strategy selects among these $n + m - 2$ candidate questions one that leads to minimal regret in the worst case: for each question we compute the minimax regret for the two possible answers, considering a penalty terms depending on the kind of question, and choose the best according to (quasi-)$\leximax$. %\Cref{sec:appendix} provides more details.
 
+The candidate questions to the agents are chosen by extending the idea of \citet{Lu2011}, that priviledge learning about the relationship of $x^*$ and $\bar{y}$ to the other alternatives if possible.
 	Given $j \in N^*$, if $x^*$ and $\bar{y}$ are incomparable in $\ppref_j$, the candidate question concerns the pair $(x^*, \bar{y})$, otherwise, %the candidate question
 	it concerns the pair $(x^*, z)$ for some $z$ incomparable to $x^*$ (randomly chosen), or if none such $z$ exist, the pair $(\bar{y}, z)$ for some $z$ incomparable to $\bar{y}$, or, if both $x^*$ and $\bar{y}$ are comparable to every alternatives in $\ppref_j$, any incomparable pair is picked at random. 
 %Responses to questions involving $x^*$ or $\bar{y}$ constrain the ability of the adversary to complete the profile in such manner, possibly reducing minimax regret.
+
+The candidate questions to the chair are determined as in the Random strategy.
+
 	Once having selected $n + m - 2$ candidate questions, the Pessimistic strategy selects the one that leads to minimal regret in the worst case.
 	%, considering both possible answers to the question, and with penalty terms depending on the kind of question. To define this comparison precisely, 
 	Assume that a question $q_1$ has type $t_1$ (being “chair” or “agent”), and leads to the new knowledge states $(\pprofile_1, W_1)$ if answered positively and $(\pprofile'_1, W'_1)$ if the answer is negative. 
@@ -341,7 +340,7 @@ The strategy selects among these $n + m - 2$ candidate questions one that leads 
 	and $R^{\min}_1 = \min\set{\MMR(\pprofile_1, W_1), \MMR(\pprofile'_1, W'_1)} \epsilon_{t} + \epsilon'_{t}$.
 	%If $(\pprofile_1, W_1) ≥ (\pprofile'_1, W'_1)$, define $\MMR^{\max} = \MMR(\pprofile_1, W_1)$ and $\MMR^{\min} = \MMR(\pprofile'_1, W'_1)$; otherwise, define $\MMR^{\max} = \MMR(\pprofile'_1, W'_1)$ and $\MMR^{\min} = \MMR(\pprofile_1, W_1)$.
 	% and and $(\pprofile^\min_2, W^\min_2)$. numbering them so that $\MMR(\pprofile_1, W_1) ≥ \MMR(\pprofile_2, W_2)$. Then the badness of the question in the worst case is:
-	The terms $\epsilon_t$ and $\epsilon'_{t}$ are real numbers associated to the type $t$ of question; these parameters are determined experimentally and used to fine control the choice of the question type. 
+	The terms $\epsilon_t$ and $\epsilon'_{t}$ are real numbers associated to the type $t$ of question; these parameters are used to fine tune the choice of the question type. 
 	Define similarly $t_2$, $R^{\max}_2$ and $R^{\min}_2$ for  $q_2$.
 	%We are now faced with the problem of aggregating these values in order to compare the informative values of the candidate questions.  \footnote{We adopt a pessimistic approach, reported to perform better than optimistic aggregation \citep{Cailloux2014}, although Our experiments in this context suggested a weak impact of that choice on the performance of the strategy.}
 	%To avoid the absorption property of the max, we adopt $\leximax$ as an aggregator.
@@ -355,7 +354,7 @@ The strategy selects among these $n + m - 2$ candidate questions one that leads 
 
 The \strat{Extended pessimistic} strategy uses the same criterion as the pessimistic strategy, but extending it to a bigger set of candidate questions, the same as those considered by the Random strategy. These candidate questions are then evaluated using the same operator as for the Pessimistic strategy.
 %We use this strategy to test whether Pessimistic performs well: depending on the quality of the heuristic of the Pessimistic strategy, it might perform nearly equally well, or perhaps even better, than Extended pessimistic, while being (much) faster. 
-Extended pessimistic is applicable only to small problem instances: its complexity is in $O(n^2 m^5)$, because we consider $O(m^2)$ questions for each agent and need for each question to compute MMR twice, whose complexity is $O(nm^3)$.
+Extended pessimistic is applicable only to very small problem instances: its complexity is in $O(n^2 m^5)$, because we consider $O(m^2)$ questions for each agent and need for each question to compute MMR twice, whose complexity is $O(nm^3)$.
 
 The \strat{Two phases} strategy is developed in order to investigate the effect of varying the proportion of questions of the two types, %asked to agents and to the chair, %and to compare the performance
 when asking all questions to the chair at the beginning or at the end.
@@ -393,7 +392,7 @@ and \emph{Skate} (judges vote on skaters at the Euros Pairs Short Program; $m \!
 %of the AGH University; 
 %and \emph{Skate}: $m \!=\! 14$ skaters evaluated by $n \!=\! 9$ judges at the Euros Pairs Short Program.
 %We want to focus on the most critical setting, as there is a wide variety of possible situations to test in such experiments.
-For the synthetic datasets, we follow an Impartial Culture (IC) assumption: the linear order of each agent is drawn i.i.d. uniformly.
+For the synthetic datasets, we follow an Impartial Culture (IC) assumption: the linear order of each agent is drawn i.i.d.\ uniformly.
 %independently and all have the same probability of appearing. 
 We believe IC to be a challenging situation and expect the number of questions to ask, in order to reach a certain level of regret, to decrease with less varied profiles.
 %We adopt IC because it is a more challenging situation: as can be expected intuitively , the number of questions to be asked decrease with less varied profiles. 
@@ -465,7 +464,7 @@ To generate the weights of the scoring rule, we first draw $m \!-\! 1$ numbers u
 Our first experiment concerns small size situations.
 \Cref{fig:smallSize} compares some of our strategies in the case $m = 5, n = 10$ (variations around this size yield similar conclusions), where the results are averaged over $200$ runs.
 %(The figure also displays the performance of the Elitist strategy, to which we will come back.)
-We see that asking random questions does not allow to reach a low regret level even after having asked 100 questions, whereas a low regret level ($\MMR$ = 1) is reached by Pessimistic before having asked 60 questions. This holds also for different problem sizes. For instance, for $m =10$, $n = 20$ and $400$ questions, Random strategy reaches an average regret (over 10 runs) of $12$ (±$ 0.7$) and Pessimistic $0.6$ (±$ 0.5$).
+We see that asking random questions does not allow to reach a low regret level even after having asked 100 questions, whereas a low regret level ($\MMR$ = 1) is reached by Pessimistic before having asked 60 questions. This also holds for other problem sizes. For instance, for $m =10$, $n = 20$ and $400$ questions, Random strategy reaches an average regret (over 10 runs) of $12$ (±$ 0.7$) and Pessimistic $0.6$ (±$ 0.5$).
 We also see that Pessimistic performs slightly better than Extended pessimistic, showing that Pessimistic chooses candidate questions wisely; this is good news since Pessimistic is much faster: it takes on average only $16$s for a complete elicitation session (for $m = 5$, $n = 10$ and $100$ questions), while Extended pessimistic takes $50$s. Although their performance is close, Pessimistic performs systematically better in multiple runs of the experiment.
 
 We also compared the Pessimistic strategy against Elitist in a situation specifically tailored to advantage Elitist. For that experiment specifically, instead of drawing the weights of the oracle randomly, we fix it to a “geometric” weight vector, such that $w_r - w_{r + 1} = 2(w_{r + 1} - w_{r + 2})$, for all $r ≤ m - 2$, so as to dramatically increase the importance of the weights associated to the top ranks. Even in that case, we see in \cref{tab:geometricWeights} that Pessimistic performs better than Elitist.
@@ -473,14 +472,9 @@ We also compared the Pessimistic strategy against Elitist in a situation specifi
 \paragraph{Evaluation of Pessimistic Strategy}
 \label{sec:lowRegret}
 Our next set of experiments evaluate the Pessimistic strategy in absolute terms. 
-We first wonder how many questions should be asked in order to reach low regret. 
-For the scope of the experiment we consider a ``low level'' to be a tenth of the number of agents: such a regret is equivalent to the difference of score of an alternative $x$ that results from switching from a profile $P$ to a profile $P'$ where ten percent of the agents rank $x$ last instead of first.
+We first wonder how many questions should be asked in order to reach a low regret level, fixed at $n / 10$: such a regret is equivalent to the difference of score of an alternative $x$ that results from switching from a profile $P$ to a profile $P'$ where ten percent of the agents rank $x$ last instead of first.
 The results for various sizes are displayed in \cref{tab:lowRegret}. 
-\commentBN{Either we remove this consideration about n/10 together with \cref{tab:lowRegret}, and we present \cref{tab:questions}. Or we redo \cref{tab:questions} considering the questions needed to reach MMR=n/10 instead of the ones needed to reach 0.}
-
-
-%For the experiments we performed, we see that the number of questions required to reach a low regret level grows approximately linearly with the number of agents and grows less fast than the square of the number of alternatives. 
-%Averaging these data by category of value for $m$, and assuming no questions get asked to the chair, we see that in order to reach a low regret level, each agent will have to answer $5.6$ questions for $m = 5$, $17.2$ questions for $m = 10$ and $27.1$ questions for $m = 15$. These numbers have to be contrasted with the estimated number of questions required to elicit the full preference of an agent which are $6.6$ for $m=5$, $24.8$ for $m=10$ and $48.4$ for $m=15$. To obtain these data, we constrained the Pessimistic strategy to ask questions to the agents only, and ran it on a single agent problem, with various values for $m$.
+Another interesting measure is the average number of questions asked to each participant before reaching zero regret. For example, in the case $m = 10, n = 20$, Pessimistic asks on average $49$ questions to the chair and $18$ questions to each agent (\cref{tab:questions} in \cref{sec:appendix} provides more data).
 
 \begin{table}
 	\caption{Number of questions needed by Pessimistic strategy to reach an MMR of $\frac{n}{10}$ (represented by $k_{\MMR}$), by size.}
@@ -498,21 +492,6 @@ The results for various sizes are displayed in \cref{tab:lowRegret}.
 		\bottomrule
 	\end{tabular}
 \end{table}
-
-
-%\begin{table}
-%	\caption{Number of questions needed by the Pessimistic strategy to elicit the complete preference of one agent.}
-%	\label{tab:fullProfile}
-%	\begin{tabular}{S[table-figures-decimal=0]S}
-%		\toprule
-%		{m} & {k} \\
-%		\midrule
-%		5 & 6.6\\
-%		10 & 24.8\\
-%		15 & 48.4\\
-%		\bottomrule
-%	\end{tabular}
-%\end{table}
 
 \begin{figure}
 	\caption{Average MMR (normalized by $n$) after $k$ questions with Pessimistic strategy for different datasets.}
@@ -577,16 +556,12 @@ The results for various sizes are displayed in \cref{tab:lowRegret}.
 	\end{tikzpicture}
 \end{figure}
 
-%We next wonder how fast the regret decreases, measured as a function of the number of questions asked. This is important practically because it may be impossible or undesirable to ask sufficient questions to reach a low regret level.
-%%Knowing the speed of decrease permits to know which trade-offs can be achieved between the quality of the resulting recommendation and the number of questions that participants have to answer. 
-%\Cref{fig:linearity} shows graphically the decrease in MMR according to the number of questions asked for various problem sizes. We see that this function is convex, apart from the very first few questions, indicating %to users of our approach 
-%that, on average, halving the number of questions will only reduce the gain in regret by less than half. %\commentBN{Reviewer: Halving the number of questions reduces the regret by more than 50\%.}
-%At the start of the elicitation, the space of uncertainty is so large that the adversary can attain the maximum possible value of regret; multiple answers are needed to constrain her enough for the MMR to start decreasing. When approaching optimality, the pace of MMR reduction decreases.
-\Cref{fig:linearity} shows graphically the decrease in MMR according to the number of questions asked for various problem sizes. In particular, we can observe, as we expected, that given a problem size, the less the profile is varied the more questions are needed to reach a given MMR. For instance, in the \textit{Skate} dataset the top-2 alternatives are the same for all agents, and 8 out of 9 agents rank the same alternative at position 3; in \textit{Courses} all agents rank the same alternative at the top position, while in \textit{T Shirt} the alternatives are evenly distributed in the preference rankings. If we compare \textit{Skate} with the same size generated problem (m=14, n=9) we see that the former performs much better than the latter, reaching zero regret after only $100$ questions, while the IC needs almost $500$ questions to reach the same result. But if we compare \textit{T Shirt} with the corresponding IC, \commentBN{Do we substitute m=10, n=30 with m=11, n=30 to make it same as T shirt?} we do not observe any important differences in terms of decrease of regret. This suggest that high degree of similarity in the preference rankings helps reducing the regret faster.
-
-
+\Cref{fig:linearity} shows graphically the decrease in MMR according to the number of questions asked for various problem sizes. In particular, this shows important differences between some real data sets and the problems generated using IC.
+In the \textit{Skate} problem, the value $\MMR = 1$ is reached after less than $100$ questions, while the IC case of the same size ($m = 14, n = 9$) requires more than $200$ questions to reach that value. But comparing \textit{T Shirt} with similar IC cases do not reveal any important differences in terms of decrease of regret. This can be explained by the high degree of similarity in the preference rankings of the \textit{Skate} problem, which helps reducing the regret faster: in that dataset the top-2 alternatives are the same for all agents, and 8 out of 9 agents rank the same alternative at position 3. By contrast, in \textit{T Shirt}, the alternatives are evenly distributed in the preference rankings. 
+% in \textit{Courses} all agents rank the same alternative at the top position,
+ 
 %\subsection{Value of information comparison}
-\paragraph{Comparison with Two Phase}
+\paragraph{Comparison with Two Phases}
 
 \begin{table}
 	\caption{Average MMR in problems of size $(10, 20)$ after $400$ questions, among which $q_c$ to the chair.}
@@ -614,8 +589,6 @@ The experiments so far let the strategy target its questions unrestrictively, le
 
 \Cref{tab:twoP400} shows the MMR value reached in problems of size $m = 10, n = 20$ after $400$ questions, using the Two phases strategy, in the “ca” (chair then agents) and in the “ac” (agents then chair) variants. These numbers are to be compared with the MMR value reached after 400 questions with the Pessimistic strategy (displayed in \cref{fig:linearity}), which is $0.6$; the Pessimistic strategy asks on average $48$ questions to the chair in this setting.
 These numbers highlight that it is possible to obtain a good-quality recommendation while knowing only that the voting rule is a scoring rule and that the weights are convex, which is our basic hypothesis (corresponding to the line $q_c = 0$, where no question is asked to the chair).
-
-
 
 \section{Conclusions}  
 \label{sec:conclusions}
@@ -711,7 +684,7 @@ Finally, an important direction of research  aims at eliciting preferences while
 	$s(c) ≤ (p + q) w_1 + (p + q) w_3 + (p + q) w_m$. It follows that $a$ or $b$ maximize $s$ (as $s(a) ≥ s(c)$). We conclude by observing that $a \in f(P) ⇔ s(a) ≥ s(b) ⇔ q w_r + p w_{r + 2} ≥ (p + q) w_{r + 1} ⇔ w_r - w_{r + 1} ≥ (p / q) (w_{r + 1} - w_{r + 2})$, and similarly for $b \in f(P)$.
 \end{proof*}
 
-
+%TODO restore this (temporarily disabled to avoid warning). I suggest $q_c$ and $q_v$ instead of qstC and qstV.
 \begin{table}
 	\caption{Average number of questions asked to the chair (\textit{qstC}) and to the agents (\textit{qstV}) by Pessimistic strategy to reach zero regret on the datasets of \cref{fig:linearity}.}
 	\label{tab:questions}
@@ -733,17 +706,4 @@ Finally, an important direction of research  aims at eliciting preferences while
 		\bottomrule
 	\end{tabular}
 \end{table}
-
-
-
 \end{document}
-
-%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-
-
-
-
-%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-
-
-
